potentially fixing profile loading animation on safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -970,6 +970,7 @@ table#user-info th {
     height: 28px;
     background-color: var(--primary);
     z-index: -1;
+    position: relative;
 }
 
 .form-group:nth-last-of-type(2) {
